<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/gradient_green">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="30dp"
                android:gravity="center_vertical"/>

            <!--<ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"/>-->

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="21dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    android:theme="@style/EditText.Green" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="21dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/lightGray"
                    android:textSize="14sp"
                    android:theme="@style/EditText.Green" />


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="21dp"
                    android:background="@drawable/gradd2"
                    android:elevation="0dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:text="@string/new_user"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="true"
                        android:textColor="@color/gray5c5c5c"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>